--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,12 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/client": "^7.2.0",
     "@repo/ui": "*",
     "next": "16.1.0",
+    "next-auth": "^4.24.13",
+    "prisma": "^7.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
