--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@repo/ui": "*",
+    "bcrypt": "^6.0.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^22.15.3",
     "@types/pg": "^8.16.0",
     "@types/react": "19.2.2",
