--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,13 +15,16 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@repo/ui": "*",
+    "@tailwindcss/postcss": "^4.1.18",
     "bcrypt": "^6.0.0",
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
+    "postcss": "^8.4.31",
     "prisma": "^7.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
