--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,11 +20,9 @@
     "next": "16.1.0",
     "next-auth": "^4.24.13",
     "pg": "^8.16.3",
-    "postcss": "^8.4.31",
     "prisma": "^7.2.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.18"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
@@ -34,7 +32,10 @@
     "@types/pg": "^8.16.0",
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.2",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9.39.1",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^4.1.18",
     "typescript": "5.9.2"
   }
 }
