Refactor code structure for improved readability and maintainability

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,34 +1,16 @@
 {
   "name": "desktop",
-  "version": "0.1.0",
-  "private": true,
-  "main": "main.js",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev -p 3001",
-    "build": "next build",
-    "start": "next start -p 3001",
-    "lint": "next lint",
-    "electron": "electron .",
-    "desktop": "concurrently \"npm run dev\" \"wait-on http://localhost:3001 && npm run electron\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
   "dependencies": {
-    "lucide-react": "^0.446.0",
-    "next": "15.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "concurrently": "^8.2.2",
-    "electron": "^30.0.6",
-    "electron-builder": "^24.13.3",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "15.0.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.5",
-    "wait-on": "^7.2.0"
+    "electron": "^39.2.7"
   }
 }
