--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -2,9 +2,11 @@
   "name": "desktop",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "next dev -p 3001",
+    "electron": "electron .",
+    "desktop": "concurrently \"npm run dev\" \"wait-on http://localhost:3001 && npm run electron\""
   },
   "keywords": [],
   "author": "",
