--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -1,7 +1,8 @@
 {
   "name": "desktop",
   "version": "1.0.0",
-  "description": "",
+  "description": "Rsync Desktop Recorder",
+  "type": "module",
   "main": "main.js",
   "scripts": {
     "dev": "next dev -p 3001",
@@ -11,8 +12,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "electron": "^39.2.7"
+    "electron": "^39.2.7",
+    "lucide-react": "^0.446.0",
+    "next": "15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.1",
+    "wait-on": "^9.0.3"
   }
 }
